# python-flask-restful-api-with-auth

./: Dockerfile  README.md  pyproject.toml  run.py
migrations/versions/: 25f0fbb12df7_initial_setup.py
src/: app.py  background.py  routes.py  server.py
src/dtos/request/: magic_link_request_dto.py  sign_in_request_dto.py
src/dtos/response/: magic_link_response_dto.py  sign_in_response_dto.py
src/enums/: role.py
src/http/: resource.py
src/middlewares/: auth_middleware.py
src/models/: model_base.py
src/models/org/: model_org.py
src/models/qr_code/: model_qr_code.py
src/models/role/: model_role.py
src/models/user/: model_user.py
src/models/user_role/: model_user_role.py
src/resources/: utils.py
src/resources/auth/: auth_base.py  auth_singular.py
src/resources/org/: org_base.py  org_plural.py  org_singular.py
src/resources/qr_code/: qr_code_base.py  qr_code_singular.py
src/resources/role/: role_base.py  role_singular.py
src/resources/schemas/: auth_schema.py  org_schema.py  qr_code_schema.py  role_schema.py  user_schema.py
src/resources/user/: user_base.py  user_plural.py  user_singular.py
src/services/auth/: auth_service.py
src/services/auth/models/: auth_model.py
src/services/qr_code/: qr_code.py
src/services/sms/: sms_service.py
src/utils/: socketio_events.py
