[tool.poetry]
name = "flask-base-app"
version = "0.1.0"
description = ""
authors = ["azrachit <admin@azrachit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
flask = "^3.0.3"
flask-cors = "^4.0.1"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^22.0.0"
gevent = "^24.2.1"
flask-restful = "^0.3.10"
shortuuid = "^1.0.13"
flask-socketio = "^5.3.6"
qrcode = "^7.4.2"
pyjwt = "^2.8.0"
bcrypt = "^4.1.3"
psycopg2-binary = "^2.9.9"
twilio = "^9.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

